# fide-google-efficiency-chess-ai-challenge

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  hello.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
notebooks/: first-bot.ipynb
submission/: main_basic.py  submission.py
submission/bots/: basic_bot.py  chess_bot_naive.py  hybrid_bot.py  utils.py
submission/fide_google_efficiency_chess_ai_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
submission/misc/: main_basic.py  stockfish_evaluator.py
submissions/: main.py
test_results/: test_session_basic_20241211_172315.json  test_session_basic_20241211_174804.json  test_session_basic_20241211_174947.json  test_session_basic_20241211_175615.json  test_session_basic_20241211_175723.json  test_session_hybrid_20241211_172330.json  test_session_hybrid_20241211_174826.json  test_session_hybrid_20241211_175006.json  test_session_hybrid_20241211_175634.json  test_session_hybrid_20241211_175740.json
tests/: conftest.py  test_basic.py  test_benchmarks.py  test_utils.py
tests/results/: test_session_basic_20241211_171702.json  test_session_hybrid_20241211_171719.json
