[project]
name = "fide-google-efficiency-chess-ai-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chessnut>=0.4.1",
    "ipython>=8.30.0",
    "memory-profiler>=0.61.0",
    "psutil>=6.1.0",
    "python-chess>=1.999",
]
